# course-animals-in-motion

./: .gitignore  .markdownlint.yaml  .nojekyll  .pre-commit-config.yaml  .readthedocs.yaml  01-intro.html  02-neural-networks.html  CNAME  CONTRIBUTING.md  README.md  _brand.yml  _quarto.yml  environment-dev.yaml  environment.yaml  index.html  intro.html  movement-tutorial.html  movement-tutorial.qmd  neural-networks.html  neural-networks.qmd  pyproject.toml  references.html  search.json  sleap-tutorial.html  sleap-tutorial.qmd  summary.html
book/: 01-intro.qmd  02-deep-learning.qmd  02-neural-networks.qmd  03-sleap-tutorial.qmd  04-movement-intro.qmd  04-movement-mouse.ipynb  04-movement-mouse.qmd  05-movement-mouse.ipynb  05-movement-mouse.qmd  05-movement-zebras.ipynb  05-movement-zebras.qmd  06-movement-zebras.ipynb  06-movement-zebras.qmd  _quarto-answers.yml  _quarto.yml  collect-solutions.lua  contributing.qmd  custom.css  index.qmd  prerequisites.qmd  references.bib
dev/: 01-intro.html  02-deep-learning.html  02-neural-networks.html  03-sleap-tutorial.html  04-movement-intro.html  04-movement-mouse.html  04-movement-mouse.ipynb  05-movement-mouse.html  05-movement-mouse.ipynb  05-movement-zebras.html  06-movement-zebras.html  06-movement-zebras.ipynb  contributing.html  index.html  prerequisites.html  references.html  search.json
dev-answers/: 01-intro.html  02-deep-learning.html  03-sleap-tutorial.html  04-movement-intro.html  05-movement-mouse.html  06-movement-zebras.html  contributing.html  index.html  prerequisites.html  references.html  search.json
(+203 files in other folders)
