[project]
name = "animals-in-motion"
version = "0.1.0"
description = "A handbook for analysing animal motions based on videos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "movement>=0.8.0",
    "napari<=2.3",
]


[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "codespell",
    "uv",
]
