[project]
name = "animals-in-motion"
version = "0.1.0"
description = "A handbook for analysing animal motions based on videos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["movement>=0.8.1",]


[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "codespell",
    "uv",
]


# Codespell should ignore references.bib
[tool.codespell]
skip = ["*references.bib"]